Cleanup: albums done. Also fixed bug with incorrect cancel path on album#edit, and truncate fixed (to have rails 4 style)

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -45,6 +45,6 @@
   background-color: white;
   padding-left: 30px;
   padding-right: 30px;
-  padding-top: 10px;
+  padding-top: 20px;
   padding-bottom: 1px;
 }
